# secretvault

./: .gitignore  CONTRIBUTING.md  DEV.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
secretvault/: __init__.py  cli.py  patterns.py  scanner.py  vault.py
tests/: test_vault.py
