[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "secretvault"
version = "0.1.0"
description = "Privacy-first secrets manager for AI agents"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Joel Claw", email = "joel@cigrand.dev"}
]
keywords = ["secrets", "privacy", "security", "ai", "llm", "redaction"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Security :: Cryptography",
]
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
crypto = ["cryptography>=41.0"]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "black>=23.0", "ruff>=0.1.0"]

[project.urls]
Homepage = "https://github.com/Joel-Claw/secretvault"
Documentation = "https://github.com/Joel-Claw/secretvault#readme"
Repository = "https://github.com/Joel-Claw/secretvault"
Issues = "https://github.com/Joel-Claw/secretvault/issues"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=secretvault"